--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "All purpose image resizing, caching and output for Node.JS",
   "main": "index.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "watch": "grunt dev"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,24 @@
   "homepage": "https://github.com/marksyzm/sickle",
   "dependencies": {
     "request": "^2.53.0",
-    "sharp": "^0.9.3"
+    "sharp": "^0.9.3",
+    "async": "^0.9.0"
+  },
+  "devDependencies": {
+    "chai": "^2.1.2",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-config-dir": "^0.3.2",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-env": "^0.4.4",
+    "grunt-mocha-cli": "^1.12.0",
+    "grunt-mocha-istanbul": "^2.3.1",
+    "grunt-nodemon": "^0.4.0",
+    "istanbul": "^0.3.8",
+    "jshint": "^2.6.3",
+    "mocha": "^2.2.1",
+    "nodemon": "^1.3.7",
+    "sinon": "^1.14.1"
   }
 }
