--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/marksyzm/sickle",
   "dependencies": {
+    "async": "^0.9.0",
+    "lodash": "^3.5.0",
+    "moment": "^2.9.0",
     "request": "^2.53.0",
-    "sharp": "^0.9.3",
-    "async": "^0.9.0"
+    "sharp": "^0.9.3"
   },
   "devDependencies": {
     "chai": "^2.1.2",
