--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "MD5": "^1.2.1",
     "async": "^0.9.0",
     "lodash": "^3.5.0",
+    "mkdirp": "^0.5.0",
     "moment": "^2.9.0",
     "request": "^2.53.0",
     "sharp": "^0.9.3"
@@ -39,6 +40,7 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-env": "^0.4.4",
+    "grunt-force-task": "^1.0.0",
     "grunt-mocha-cli": "^1.12.0",
     "grunt-mocha-istanbul": "^2.3.1",
     "grunt-nodemon": "^0.4.0",
