--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "output"
   ],
   "author": "Mark Elphinstone-Hoadley",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/marksyzm/sickle/issues"
   },
